--- a/index.html
+++ b/index.html
@@ -1,5 +1,26 @@
 <!DOCTYPE html>
 <html>
+  <!-- SEO Básico -->
+<title>Calculadora de Ahorro Legal | Attestyr</title>
+<meta name="description" content="Calcula cuánto puedes ahorrar con Attestyr resolviendo disputas en línea mediante mediación, conciliación y arbitraje 100% digitales.">
+<meta name="keywords" content="attestyr, legaltech, mediación en línea, conciliación digital, arbitraje privado, ahorro legal, resolver disputas, legal tech México, contratos digitales">
+<meta name="author" content="Attestyr SAPI">
+<meta name="robots" content="index, follow">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<!-- Open Graph (para Facebook y LinkedIn) -->
+<meta property="og:title" content="Calculadora de Ahorro Legal | Attestyr">
+<meta property="og:description" content="Reduce costos y tiempo resolviendo tus conflictos legales de forma digital con Attestyr.">
+<meta property="og:image" content="https://www.attestyr.com/icon.png"> <!-- Cambia por tu URL real -->
+<meta property="og:url" content="https://subdominio.attestyr.com"> <!-- Cambia por tu subdominio en Vercel -->
+<meta property="og:type" content="website" />
+
+<!-- Twitter Cards -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Calculadora de Ahorro Legal | Attestyr">
+<meta name="twitter:description" content="Resuelve disputas con Attestyr desde $5,000 MXN o $180 USD. Comparte esta herramienta.">
+<meta name="twitter:image" content="https://www.attestyr.com/icon.png">
   <head>
     <base target="_top">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
