--- a/index.html
+++ b/index.html
@@ -74,106 +74,122 @@
     <a href="https://www.attestyr.com/contact" target="_blank" class="button-secondary">SOLICITAR COTIZACIÓN FORMAL</a>
   </div>
 
-  <script>
-    const tarifasNacionales = [
-      { min: 0, max: 100000, centro: 8000, honorarios1: 7000, honorarios3: 14000 },
-      { min: 100001, max: 300000, centro: 12000, honorarios1: 8000, honorarios3: 16000 },
-      { min: 300001, max: 700000, centro: 21000, honorarios1: 9000, honorarios3: 18000 },
-      { min: 700001, max: 1000000, centro: 28000, honorarios1: 12000, honorarios3: 24000 },
-      { min: 1000001, max: 1200000, centro: 35000, honorarios1: 15000, honorarios3: 30000 },
-      { min: 1200001, max: 5000000, centro: 86000, honorarios1: 50000, honorarios3: 100000 },
-      { min: 5000001, max: 10000000, centro: 185000, honorarios1: 65000, honorarios3: 130000 }
-    ];
-    const tarifasInternacionales = [
-      { min: 0, max: 50000, centro: 2500, honorarios1: 2500, honorarios3: 7500 },
-      { min: 50001, max: 250000, centro: 6800, honorarios1: 3250, honorarios3: 9750 },
-      { min: 250001, max: 500000, centro: 12500, honorarios1: 5000, honorarios3: 15000 }
-    ];
+<script>
+const tarifasNacionales = [
+  { min: 0, max: 100000, centro: 8000, honorarios1: 7000, honorarios3: 14000 },
+  { min: 100001, max: 300000, centro: 12000, honorarios1: 8000, honorarios3: 16000 },
+  { min: 300001, max: 700000, centro: 21000, honorarios1: 9000, honorarios3: 18000 },
+  { min: 700001, max: 1000000, centro: 28000, honorarios1: 12000, honorarios3: 24000 },
+  { min: 1000001, max: 1200000, centro: 35000, honorarios1: 15000, honorarios3: 30000 },
+  { min: 1200001, max: 5000000, centro: 86000, honorarios1: 50000, honorarios3: 100000 },
+  { min: 5000001, max: 10000000, centro: 185000, honorarios1: 65000, honorarios3: 130000 }
+];
 
-    document.getElementById("monto").addEventListener("keypress", function(e) {
-      if (e.key === 'Enter') calcular();
-    });
+const tarifasInternacionales = [
+  { min: 0, max: 50000, centro: 2500, honorarios1: 2500, honorarios3: 7500 },
+  { min: 50001, max: 250000, centro: 6800, honorarios1: 3250, honorarios3: 9750 },
+  { min: 250001, max: 500000, centro: 12500, honorarios1: 5000, honorarios3: 15000 }
+];
 
-    function parseMonto(input) {
-      return parseInt(input.replace(/,/g, '').replace(/\./g, '')) || 0;
-    }
+document.getElementById("monto").addEventListener("keypress", function(e) {
+  if (e.key === 'Enter') calcular();
+});
 
-    function calcular() {
-      const tipo = document.getElementById("tipo").value;
-      const mecanismo = document.getElementById("mecanismo").value;
-      const monto = parseMonto(document.getElementById("monto").value);
-      const moneda = tipo === 'nacional' ? 'MXN' : 'USD';
-      const simbolo = '$';
-      const arbitros = mecanismo === 'arbitraje3' ? 3 : 1;
+function parseMonto(input) {
+  return parseInt(input.replace(/,/g, '').replace(/\./g, '')) || 0;
+}
 
-      let total = 0, centro = 0, honorarios = 0;
+function calcular() {
+  const tipo = document.getElementById("tipo").value;
+  const mecanismo = document.getElementById("mecanismo").value;
+  const monto = parseMonto(document.getElementById("monto").value);
+  const moneda = tipo === 'nacional' ? 'MXN' : 'USD';
+  const simbolo = '$';
+  const arbitros = mecanismo === 'arbitraje3' ? 3 : 1;
 
-      if (mecanismo.startsWith("arbitraje")) {
-        const tarifas = tipo === 'nacional' ? tarifasNacionales : tarifasInternacionales;
-        const tramo = tarifas.find(t => monto >= t.min && monto <= t.max);
-        if (!tramo) return alert("Monto fuera de rango para este mecanismo.");
+  let total = 0, centro = 0, honorarios = 0;
 
-        centro = tramo.centro;
-        honorarios = arbitros === 3 ? tramo.honorarios3 : tramo.honorarios1;
-        total = centro + honorarios;
-      } else {
-        const tabla = tipo === 'nacional' ? {
-          mediacion: 10000, conciliacion: 14000
-        } : {
-          mediacion: 3000, conciliacion: 4800
-        };
-        total = tabla[mecanismo];
-        centro = total * 0.5;
-        honorarios = total * 0.5;
-      }
+  if (mecanismo.startsWith("arbitraje")) {
+    const tarifas = tipo === 'nacional' ? tarifasNacionales : tarifasInternacionales;
+    const tramo = tarifas.find(t => monto >= t.min && monto <= t.max);
+    if (!tramo) return alert("Monto fuera de rango para este mecanismo.");
 
-      document.getElementById("cotizacion").innerHTML = `
-        <strong>Cotización estimada para tu disputa (${moneda}):</strong><br>
-        <table>
-          <tr><td>Monto de la disputa:</td><td>${simbolo}${monto.toLocaleString()}</td></tr>
-          <tr><td>Tarifa del centro:</td><td>${simbolo}${centro.toLocaleString()}</td></tr>
-          <tr><td>Honorarios:</td><td>${simbolo}${honorarios.toLocaleString()}</td></tr>
-          <tr><td>Viáticos:</td><td>${simbolo}0</td></tr>
-          <tr><td><strong>Total Attestyr:</strong></td><td><strong>${simbolo}${total.toLocaleString()}</strong></td></tr>
-        </table>`;
+    centro = tramo.centro;
+    honorarios = arbitros === 3 ? tramo.honorarios3 : tramo.honorarios1;
+    total = centro + honorarios;
+  } else {
+    const tabla = tipo === 'nacional' ? {
+      mediacion: 10000, conciliacion: 14000
+    } : {
+      mediacion: 3000, conciliacion: 4800
+    };
+    total = tabla[mecanismo];
+    centro = total * 0.5;
+    honorarios = total * 0.5;
+  }
 
-      const tradicional = total * 2.5;
-      const viaticosComp = tipo === 'internacional' ? tradicional * 0.25 : tradicional * 0.20;
-      const ctx = document.getElementById('chart').getContext('2d');
-      if (window.chartRef) window.chartRef.destroy();
-      window.chartRef = new Chart(ctx, {
-        type: 'bar',
-        data: {
-          labels: ['Tarifa centro', 'Honorarios', 'Viáticos', 'Total'],
-          datasets: [
-            { label: 'Attestyr', data: [centro, honorarios, 0, total], backgroundColor: '#16395f' },
-            { label: 'Solución tradicional', data: [tradicional * 0.4, tradicional * 0.4, viaticosComp, tradicional], backgroundColor: '#f5a623' }
-          ]
+  const viaticosAttestyr = 0;
+  const tradicional = total * 2.5;
+  const viaticosCompetencia = tipo === 'internacional' ? tradicional * 0.25 : tradicional * 0.20;
+
+  document.getElementById("cotizacion").innerHTML = `
+    <strong>Cotización estimada para tu disputa (${moneda}):</strong><br>
+    <table>
+      <tr><td>Monto de la disputa:</td><td>${simbolo}${monto.toLocaleString()}</td></tr>
+      <tr><td>Tarifa del centro:</td><td>${simbolo}${centro.toLocaleString()}</td></tr>
+      <tr><td>Honorarios:</td><td>${simbolo}${honorarios.toLocaleString()}</td></tr>
+      <tr><td>Viáticos:</td><td>${simbolo}${viaticosAttestyr}</td></tr>
+      <tr><td><strong>Total Attestyr:</strong></td><td><strong>${simbolo}${total.toLocaleString()}</strong></td></tr>
+    </table>`;
+
+  const ctx = document.getElementById('chart').getContext('2d');
+  if (window.chartRef) window.chartRef.destroy();
+  window.chartRef = new Chart(ctx, {
+    type: 'bar',
+    data: {
+      labels: ['Tarifa centro', 'Honorarios', 'Viáticos', 'Total'],
+      datasets: [
+        {
+          label: 'Attestyr',
+          data: [centro, honorarios, viaticosAttestyr, total],
+          backgroundColor: '#16395f'
         },
-        options: {
-          responsive: true,
-          plugins: {
-            legend: { position: 'bottom' },
-            tooltip: {
-              callbacks: {
-                label: ctx => `${ctx.dataset.label}: ${simbolo}${ctx.raw.toLocaleString()}`
-              }
-            }
-          },
-          scales: {
-            y: {
-              beginAtZero: true,
-              ticks: {
-                callback: function(value) {
-                  return value >= 1000000 ? value / 1000000 + 'M' :
-                         value >= 1000 ? value / 1000 + 'k' : value;
-                }
-              }
+        {
+          label: 'Solución tradicional',
+          data: [
+            tradicional * 0.4,
+            tradicional * 0.4,
+            viaticosCompetencia,
+            tradicional
+          ],
+          backgroundColor: '#f5a623'
+        }
+      ]
+    },
+    options: {
+      responsive: true,
+      plugins: {
+        legend: { position: 'bottom' },
+        tooltip: {
+          callbacks: {
+            label: ctx => `${ctx.dataset.label}: ${simbolo}${ctx.raw.toLocaleString()}`
+          }
+        }
+      },
+      scales: {
+        y: {
+          beginAtZero: true,
+          ticks: {
+            callback: function(value) {
+              return value >= 1_000_000 ? value / 1_000_000 + 'M' :
+                     value >= 1_000 ? value / 1_000 + 'k' : value;
             }
           }
         }
-      });
+      }
     }
-  </script>
+  });
+}
+</script>
 </body>
 </html>
